correct spacing between bottom modules for 1024+ px

--- a/template/templates/RunStrong/css/modules.css
+++ b/template/templates/RunStrong/css/modules.css
@@ -117,7 +117,7 @@
 	background-color: #fff;
 	border: 1px solid #d7d7d7;
     border-radius: 6px;
-	margin: 50px 0 0 47px;
+	margin: 50px 0 0 34px;
 	padding: 20px 20px 30px;
 	box-shadow: 0 6px 10px 0px rgba(208, 208, 208,0.7);
 	behavior: url('templates/RunStrong/resources/PIE.htc');
